// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostReadLink should render ltr correctly 1`] = `
.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c0 {
    padding-right: 0;
  }
}

<div
  class="c0"
  dir="ltr"
>
  <a
    class="c1"
    href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
  >
    Could a computer ever create better art than a human?
  </a>
</div>
`;

exports[`MostReadLink should render rtl correctly 1`] = `
.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c0 {
    padding-left: 0;
  }
}

<div
  class="c0"
  dir="rtl"
>
  <a
    class="c1"
    href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
  >
    لماذا يخجل البعض من اسم قريته في مصر؟
  </a>
</div>
`;

exports[`MostReadLink should render with last updated date correctly 1`] = `
.c2 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c0 {
    padding-right: 0;
  }
}

<div
  class="c0"
  dir="ltr"
>
  <a
    class="c1"
    href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
  >
    Could a computer ever create better art than a human?
  </a>
  <time
    class="c2"
    datetime="2019-03-01T14:00+00:00"
  >
    Last updated: 5th November 2016
  </time>
</div>
`;

exports[`MostReadRank should render ltr correctly 1`] = `
.c0 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<span
  class="c0"
  dir="ltr"
>
  5
</span>
`;

exports[`MostReadRank should render ltr with double digits correctly 1`] = `
.c0 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<span
  class="c0"
  dir="ltr"
>
  10
</span>
`;

exports[`MostReadRank should render rtl correctly 1`] = `
.c0 {
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  color: #B80000;
  margin: 0;
  padding: 0;
  float: left;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

<span
  class="c0"
  dir="ltr"
>
  ۲
</span>
`;
